--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.websystique.maven</groupId>
-  <artifactId>Vedant_web</artifactId>
+  <artifactId>Aishwarya_web</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
